# lib/db/src/schema/trips.ts
@@ -6,7 +6,6 @@ export const tripsTable = pgTable("trips", {
   id: serial("id").primaryKey(),
   name: text("name").notNull(),
   description: text("description"),
-  password: text("password").notNull().default(""),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
   updatedAt: timestamp("updated_at", { withTimezone: true }).notNull().defaultNow().$onUpdate(() => new Date()),
 });
